#8 add api for creating tariffs

--- a/src/TransportLogistics/Tariff/Tests/Tariffs.Tests.UnitTests/Tariffs.Tests.UnitTests.csproj
+++ b/src/TransportLogistics/Tariff/Tests/Tariffs.Tests.UnitTests/Tariffs.Tests.UnitTests.csproj
@@ -29,4 +29,10 @@
         <ProjectReference Include="..\..\Domain\Tariffs.Domain\Tariffs.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Update="TariffTestsData.cs">
+        <DependentUpon>CreateTariffTests.cs</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
 </Project>
