--- a/src/TransportLogistics/Tariff/Application/Tariffs.Application/Tariffs.Application.csproj
+++ b/src/TransportLogistics/Tariff/Application/Tariffs.Application/Tariffs.Application.csproj
@@ -10,4 +10,30 @@
         <PackageReference Include="AutoMapper" Version="11.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\..\SharedKernel\Application.Abstracts\Application.Abstracts.csproj" />
+        <ProjectReference Include="..\..\Domain\Tariffs.Domain\Tariffs.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="TariffServices\SaveTariffRouteCommand.cs">
+        <DependentUpon>SaveTariffRouteCommandHandler.cs</DependentUpon>
+      </Compile>
+      <Compile Update="TariffServices\PointDto.cs">
+        <DependentUpon>SaveTariffRouteCommandHandler.cs</DependentUpon>
+      </Compile>
+      <Compile Update="TariffServices\SaveTariffCargoCommand.cs">
+        <DependentUpon>SaveTariffCargoCommandHandler.cs</DependentUpon>
+      </Compile>
+      <Compile Update="TariffServices\SaveTariffPriceCommand.cs">
+        <DependentUpon>SaveTariffPriceCommandHandler.cs</DependentUpon>
+      </Compile>
+      <Compile Update="TariffServices\PublishTariffCommand.cs">
+        <DependentUpon>PublishTariffCommandHandler.cs</DependentUpon>
+      </Compile>
+      <Compile Update="TariffServices\CreateTariffCommand.cs">
+        <DependentUpon>CreateTariffCommandHandler.cs</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
 </Project>
