--- a/src/TransportLogistics/Tariff/Infrastructure/Tariffs.Infrastructure.WebApi/appsettings.json
+++ b/src/TransportLogistics/Tariff/Infrastructure/Tariffs.Infrastructure.WebApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Neo4jSettings": {
+    "Uri": "bolt://localhost:7687",
+    "UserName": "neo4j",
+    "Password": "123"
+  }
 }
