--- a/src/TransportLogistics/Tariff/Domain/Tariffs.Domain/Tariffs.Domain.csproj
+++ b/src/TransportLogistics/Tariff/Domain/Tariffs.Domain/Tariffs.Domain.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\..\SharedKernel\Domain.Abstracts\Domain.Abstracts.csproj" />
+      <ProjectReference Include="..\..\..\..\SharedKernel\Infrastructure\Compress.Extensions\Compress.Extensions.csproj" />
     </ItemGroup>
 
 </Project>
