TL Init sync locations job

--- a/src/TransportLogistics/Tariff/Infrastructure/DataAccess/Tariffs.Neo4j/Tariffs.Neo4j.csproj
+++ b/src/TransportLogistics/Tariff/Infrastructure/DataAccess/Tariffs.Neo4j/Tariffs.Neo4j.csproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\..\..\SharedKernel\Infrastructure\SharedKernel.Compress.Extensions\SharedKernel.Compress.Extensions.csproj" />
+        <ProjectReference Include="..\..\..\..\..\SharedKernel\Infrastructure\SharedKernel.Neo4j\SharedKernel.Neo4j.csproj" />
         <ProjectReference Include="..\..\..\Application\Tariffs.UseCases\Tariffs.UseCases.csproj" />
     </ItemGroup>
 
