--- a/src/SharedKernel/Infrastructure/SharedKernel.DependencyInjection/SharedKernel.DependencyInjection.csproj
+++ b/src/SharedKernel/Infrastructure/SharedKernel.DependencyInjection/SharedKernel.DependencyInjection.csproj
@@ -10,10 +10,12 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\SharedKernel.DataAccess\SharedKernel.DataAccess.csproj"/>
+        <ProjectReference Include="..\SharedKernel.Neo4j\SharedKernel.Neo4j.csproj" />
     </ItemGroup>
 
 </Project>
